--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
 
 <ul>
 	{{#each books}}
-		{{#unless devoured}}
-			{{> books/book-block devoured=true}}
-		{{/unless}}
+	{{#unless devoured}}
+	{{> books/book-block devour=true}}
+	{{/unless}}
 	{{/each}}
 </ul>
 
@@ -15,12 +15,24 @@
 <ul>
 	{{#each books}}
 		{{#if devoured}}
-			{{> books/book-block devoured=false}}
+			{{> books/book-block devour=false}}
 		{{/if}}
 	{{/each}}
 </ul>
 
 <h2>Add a Book</h2>
-<form>
+<form class="create-form">
 	{{!-- create form content herre --}}
+	<div class="form-group">
+		<label for="bo">Book Name:</label>
+		<input type="text" id="bo" name="name">
+	</div>
+
+	<div class="form-group">
+		<label for="devoured">Devoured?</label><br>
+		<input type="radio" name="devoured" value="1" checked> Devoured!<br>
+		<input type="radio" name="devoured" value="0"> Unread
+	</div>
+
+	<button type="submit">Add Book</button>
 </form>
