add template readme file

--- a/views/partials/books/book-block.handlebars
+++ b/views/partials/books/book-block.handlebars
@@ -3,7 +3,7 @@
 	{{!-- Add button html element here --}}
 
 	<button class="change-read" data-id="{{id}}" data-newread="{{devour}}">
-		{{#if devour}}GOOD JOB NERD!{{else}}KEEP READING!{{/if}}
+		{{#if devour}}GOOD JOB NERD!{{else}}PUT IT BACK!{{/if}}
 	</button>
 
 </li>
