--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,85 @@
-<h1>Books</h1>
+<div class="container">
 
-<h2>Books to read!</h2>
+	<section class="hero is-link is-small">
+		<div class="hero-body has-text-centered">
+			<p class="subtitle">
+				<i class="fas fa-book fa-3x"></i>
+				<i class="fas fa-book-medical fa-3x"></i>
+				<i class="fas fa-book-dead fa-3x"></i>
+				<i class="fas fa-journal-whills fa-3x"></i>
+			</p>
+			<p class="title is-1">
+				Read A Book Ya Nerd!
+			</p>
+			<p class="subtitle">
+				<i class="fas fa-quran fa-3x"></i>
+				<i class="fas fa-torah fa-3x"></i>
+				<i class="fas fa-bible fa-3x"></i>
+				<i class="fas fa-atlas fa-3x"></i>
+			</p>
+		</div>
+	</section>
 
-<ul>
-	{{#each books}}
-	{{#unless devoured}}
-	{{> books/book-block devour=true}}
-	{{/unless}}
-	{{/each}}
-</ul>
+	<section class="container">
+		<div>
+			<h1 class="title has-text-centered mt-4">Super Book Logger Deluxe Ultra Giga Version 3.0</h1>
+			<div class="tile is-ancestor">
 
-<h2>Books that have been read!</h2>
 
-<ul>
-	{{#each books}}
-		{{#if devoured}}
-			{{> books/book-block devour=false}}
-		{{/if}}
-	{{/each}}
-</ul>
+				<div class="tile is-parent">
+					<div class="tile is-child notification is-danger">
+						<h2 class="title">Books to read!</h2>
+						<ul>
+							{{#each books}}
+							{{#unless devoured}}
+							{{> books/book-block devour=true}}
+							{{/unless}}
+							{{/each}}
+						</ul>
 
-<h2>Add a Book</h2>
-<form class="create-form">
-	{{!-- create form content herre --}}
-	<div class="form-group">
-		<label for="bo">Book Name:</label>
-		<input type="text" id="bo" name="name">
-	</div>
+					</div>
+				</div>
+				<div class="tile is-parent">
+					<div class="tile is-child notification is-success">
+						<h2 class="title">Books that have been read!</h2>
+						<ul>
+							{{#each books}}
+							{{#if devoured}}
+							{{> books/book-block devour=false}}
+							{{/if}}
+							{{/each}}
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 
-	<div class="form-group">
-		<label for="devoured">Devoured?</label><br>
-		<input type="radio" name="devoured" value="1" checked> Devoured!<br>
-		<input type="radio" name="devoured" value="0"> Unread
-	</div>
 
-	<button type="submit">Add Book</button>
-</form>
+	</section>
+
+	<section class="has-text-centered">
+		<div class="tile is-ancestor">
+			<div class="tile is-parent">
+				<div class="tile is-child notification is-link">
+					<h2 class="title">Add a Book</h2>
+					<form class="create-form">
+						{{!-- create form content herre --}}
+						<div class="form-group">
+							<label for="bo">Book Name:</label>
+							<input type="text" id="bo" name="name">
+						</div>
+
+						<div class="form-group control">
+							<label class="radio" for="devoured">Have you read this book?</label></hr>
+							<input type="radio" name="devoured" value="1" checked> Devoured!
+							<input type="radio" name="devoured" value="0"> Unread
+						</div>
+
+						<button type="submit">Add Book</button>
+					</form>
+				</div>
+			</div>
+		</div>
+
+	</section>
+</div>
