--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Read a Book, ya Nerd!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/books.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<title>Read a Book, ya Nerd!</title>
+	<script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+	<script src="/assets/js/books.js"></script>
+</head>
+
+<body>
+	{{{ body }}}
+</body>
+
 </html>
