cleaned code formatting

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,19 +3,19 @@
 	<section class="hero is-link is-small">
 		<div class="hero-body has-text-centered">
 			<p class="subtitle">
-				<i class="fas fa-book fa-3x"></i>
-				<i class="fas fa-book-medical fa-3x"></i>
-				<i class="fas fa-book-dead fa-3x"></i>
-				<i class="fas fa-journal-whills fa-3x"></i>
+				<i class="fas fa-book fa-2x mx-5"></i>
+				<i class="fas fa-book-medical fa-2x mx-5"></i>
+				<i class="fas fa-book-dead fa-2x mx-5"></i>
+				<i class="fas fa-journal-whills fa-2x mx-5"></i>
 			</p>
-			<p class="title is-1">
+			<p class="title is-2">
 				Read A Book Ya Nerd!
 			</p>
 			<p class="subtitle">
-				<i class="fas fa-quran fa-3x"></i>
-				<i class="fas fa-torah fa-3x"></i>
-				<i class="fas fa-bible fa-3x"></i>
-				<i class="fas fa-atlas fa-3x"></i>
+				<i class="fas fa-quran fa-2x mx-5"></i>
+				<i class="fas fa-torah fa-2x mx-5"></i>
+				<i class="fas fa-bible fa-2x mx-5"></i>
+				<i class="fas fa-atlas fa-2x mx-5"></i>
 			</p>
 		</div>
 	</section>
@@ -71,7 +71,7 @@
 
 						<div class="form-group control">
 							<label class="radio" for="devoured">Have you read this book?</label></hr>
-							<input type="radio" name="devoured" value="1" checked> Devoured!
+							<input type="radio" name="devoured" value="1" checked> Read
 							<input type="radio" name="devoured" value="0"> Unread
 						</div>
 
